# reactos

./: .gitignore  CMakeLists.txt
base/applications/: CMakeLists.txt
base/applications/d3d10test/: CMakeLists.txt  d3d10hw.c  d3d10hw.cpp
base/applications/glgears/: CMakeLists.txt  glgears.c  resouce.h  rsrc.rc
base/applications/iexplore/: main.c
base/services/umpnpmgr/: rpcserver.c
base/shell/cmd/: CMakeLists.txt
base/shell/explorer/: CMakeLists.txt  notifyiconscust.cpp  precomp.h  resource.h  syspager.cpp  trayntfy.cpp  trayprop.cpp  traywnd.cpp
base/system/winlogon/: notify.c
boot/bootdata/: bootcd.ini  hivecls.inf  hivedef.inf  hivesft.inf  hivesys.inf  hybridcd.ini  livecd.ini  txtsetup.sif
boot/bootdata/bootcd/: unattend.inf
boot/freeldr/freeldr/: CMakeLists.txt  freeldr.c
dll/: CMakeLists.txt
dll/appcompat/apphelp/: apphelp.spec  dbgheap.c
dll/directx/: CMakeLists.txt
dll/directx/ddraw/: main.c
dll/directx/dsound_new/: CMakeLists.txt
dll/directx/wine/: CMakeLists.txt
dll/ntdll/: CMakeLists.txt
dll/ntdll/def/: ntdll.spec
dll/ntdll/dispatch/: dispatch.c
dll/ntdll/include/: ntdllp.h
dll/ntdll/ldr/: ldrinit.c  ldrutils.c
dll/ntdll/rtl/: libsupp.c  uilist.c  version.c
dll/opengl/opengl32/: icdload.c
dll/win32/: CMakeLists.txt
dll/win32/KernelBase/: CMakeLists.txt  DllMain.c  KB.h  KernelBase.Spec  KernelBase.spec
dll/win32/KernelBase/wine/: CMakeLists.txt  KernelBase.spec  debug.c  file.c  hacks.h  loader.c  locale.c  main.c  memory.c  sync.c  thread.c
dll/win32/advapi32/: advapi32.spec
dll/win32/bcrypt/: bcrypt_main.c
dll/win32/browseui/: CMakeLists.txt  browseui.spec
dll/win32/cfgmgr32/: cfgmgr32.spec
dll/win32/comctl32/: CMakeLists.txt  IListVIew.c  IListView.c  animate.c  button.c  combo.c  comctl32.h  comctl32.spec  comctl32undoc.c  commctrl.c  datetime.c  edit.c  edit.c.rej  header.c  hotkey.c  imagelist.c  ipaddress.c  ipaddress.c.rej  listbox.c  listview.c  monthcal.c  propsheet.c  rebar.c  rsrc.rc  static.c  status.c  string.c  syslink.c  tab.c  test_comctl32.h.rej  theming.c  toolbar.c  tooltips.c  trackbar.c  treeview.c  undoc_scroll.c  updown.c  winterminal.cpp
dll/win32/comdlg32/: CMakeLists.txt  cdlg32.c  colordlg.c  comdlg32.spec  comdlg32_classes.rgs  itemdlg.c  rsrc.rc
dll/win32/cryptbase/: cryptbase.spec
dll/win32/dbghelp/: dbghelp.spec
dll/win32/esent/: esent.spec
dll/win32/feclient/: CMakeLists.txt  feclient.spec
dll/win32/iphlpapi/: iphlpapi.spec  iphlpapi_reactos.c
dll/win32/kernel32/: CMakeLists.txt  kernel32.spec
dll/win32/mpr/: mpr.spec  wnet.c
dll/win32/msctf/: inputprocessor.c
dll/win32/msvcrt/: CMakeLists.txt  msvcrt.spec
dll/win32/netapi32/: netapi32.spec
dll/win32/ole32/: ole32.spec
dll/win32/oleacc/: oleacc.spec
dll/win32/oleaut32/: oleaut32.spec
dll/win32/powrprof/: CMakeLists.txt  powrprof.c  powrprof.spec
dll/win32/propsys/: CMakeLists.txt  propertybag.c  propsys.spec  propvar.c
dll/win32/psapi/: CMakeLists.txt
dll/win32/rpcrt4/: rpcrt4.spec
dll/win32/setupapi/: setupapi.spec
dll/win32/shdocvw/: shdocvw_main.c
dll/win32/shell32/: CMakeLists.txt  precomp.h  shell32.cpp  shell32.spec  shlexec.cpp  shresdef.h  stubs.cpp  utils.cpp  vista.c
dll/win32/shlwapi/: shlwapi.spec
dll/win32/slc/: CMakeLists.txt  slc.c  slc.rc
dll/win32/sppc/: CMakeLists.txt  sppc.c
dll/win32/ucrtbase/: CMakeLists.txt  stubs.c  ucrtbase.spec
dll/win32/urlmon/: axinstall.c  urlmon.spec
dll/win32/uxtheme/: CMakeLists.txt  draw.c  main.c  system.c  themeserver.c  uxini.c  uxtheme.spec  uxtheme_vista.spec
dll/win32/version/: version.c  version.spec
dll/win32/wdmaud.drv/: wdmaud.c
dll/win32/winsta/: winsta.spec  ws.c
dll/win32/ws2_32/: ws2_32.spec
dll/win32/wsock32/: CMakeLists.txt
dll/win32_vista/: CMakeLists.txt
dll/win32_vista/bcryptprimitives/: CMakeLists.txt  main.c  stubs.c
dll/win32_vista/clbcatq/: clbcatq_private.h
dll/win32_vista/cryptbase/: cryptbase_private.h
dll/win32_vista/ncrypt/: ncrypt.spec
dll/win32_vista/rstrtmgr/: CMakeLists.txt  DllMain.c  KB.h  RstrtMgr.spec  stubs.c
dll/win32_vista/shcore/: CMakeLists.txt  main.c
dll/win32_vista/uianimation/: CMakeLists.txt
dll/win32_vista/uiautomationcore/: CMakeLists.txt
dll/win32_vista/winusb/: CMakeLists.txt
drivers/base/kdcom/: CMakeLists.txt
drivers/base/kdnet/: kdnet.c
drivers/base/kdstub/: CMakeLists.txt  intel_net copy.h  intel_net.h  kdnetshareddata.h  kdstub.c  kdstub.spec  win8_exports.c
drivers/base/kdstub/rt/: kdrealtek.c  pch.h
drivers/bus/acpi/: buspdo.c
drivers/crypto/ksecdd/: dispatch.c
drivers/filters/fltmgr/: Filter.c  Interface.c
drivers/input/i8042prt/: hwhacks.c
drivers/sac/driver/: concmd.c
drivers/usb/usbd/: CMakeLists.txt
drivers/usb/usbstor/: disk.c  scsi.c
hal/halx86/: CMakeLists.txt  acpi.cmake  apic.cmake
hal/halx86/acpi/: acpidisp.c  busemul.c  halacpi.c  halpnpdd.c  madt.c
hal/halx86/apic/: apic.c  halinit.c  ioapic.c  tsc.c
hal/halx86/generic/: up.c  x86bios.c
hal/halx86/include/: halp.h
hal/halx86/pic/: pic.c
media/doc/: WINESYNC.txt
media/inf/: CMakeLists.txt  CX_51250.inf  hdaudio.inf  syssetup.inf  usbhub3.inf  wdma_usb.inf
media/themes/: CMakeLists.txt
media/themes/Aero/: CMakeLists.txt
modules/: CMakeLists.txt
modules/drivers/: acpi.sys  isapnp.sys  ol_pci.sys
modules/system32/: example.ini  wpfgfx_cor3.lib
ntoskrnl/: CMakeLists.txt  ntos.cmake  ntoskrnl.spec
ntoskrnl/ex/: init.c
ntoskrnl/inbv/: bootanim.c  bootanim.rc
ntoskrnl/include/: resource.h
ntoskrnl/io/: pnpio.h
ntoskrnl/kd64/: kdinit.c
ntoskrnl/ke/: bug.c  thrdschd.c  timerobj.c
ntoskrnl/po/: power.c
ntoskrnl/ps/: job.c  kill.c  process.c
ntoskrnl/rtl/: misc.c
ntoskrnl/se/: accesschk.c
ntoskrnl/wmi/: wmidrv.c
sdk/cmake/: CMakeMacros.cmake  baseaddress.cmake  baseaddress_msvc.cmake  config.cmake  gcc.cmake
sdk/tools/: CMakeLists.txt
win32ss/: CMakeLists.txt
win32ss/include/: ntuser.h
win32ss/reactx/: CMakeLists.txt
win32ss/user/user32_vista/: CMakeLists.txt  dpi.c  stubs.c  user32_vista.spec
(+419 files in other folders)
